toList を Collectors.toListに修正（互換性の対応）